apply responsive design

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="sidebar">
-        <div class="sidebar-profile">
+      <div class="profile-container">
+        <div class="profile-header">
           <img
             src="images/profilePicture.png"
             alt="Profile Picture"
@@ -23,17 +23,17 @@
             width="100px"
             height="100px"
           />
-          <div class="profile-info">
-            <h1>Jan Mark Torres</h1>
-            <h2>Frontend Developer</h2>
+          <div>
+            <p>Jan Mark Torres</p>
+            <p>Frontend Developer</p>
           </div>
         </div>
-        <p>
-          My name is Jan Mark Torres and I'm a passionate Software Developer. I
-          like to learn new things and build cool stuff.
-        </p>
-        <div class="contact-info">
-          <h2>Contact Me</h2>
+        <div class="profile-bio">
+          <p>
+            My name is Jan Mark Torres and I'm a passionate Software Developer.
+            I like to learn new things and build cool stuff.
+          </p>
+          <p class="contact-me">Contact Me</p>
           <p>
             Email:
             <a href="mailto:torres.janmark21@gmail.com"
@@ -42,7 +42,8 @@
           </p>
         </div>
       </div>
-      <div class="main">
+
+      <div class = "info-container">
         <h1>Projects</h1>
         <ul>
           <li><a href="#">Project 1</a></li>
